2008-08-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesRule.cs: Fix case where we can't 
	resolve the base type when checking for static types.
	* BadRecursiveInvocationRule.cs: Fix case where we can't resolve
	a type.
	* ReviewSelfAssignmentRule.cs: Fix two cases where the field's 
	types cannot be resolved.

2008-07-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotRoundIntegersRule.cs: Move up break condition to make sure
	we're not missing the return value of a previous call before Round.

2008-07-23  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs: Fix false positives when generics
	or explicit interfaces are being used. Optimized CompareMethods to use
	MetadataToken (when possible) and removed Instructions.IndexOf call.

2008-07-22  Nestor Salceda  <nestor.salceda@gmail.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: Remove the use
	Regexp, and use a HashSet<char> as Dan suggested.

2008-07-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: New. Rule to check
	the correct fields passed to a formatting method.
	* Makefile.am: Add rule/test to the build.
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.

2008-07-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs: Fix typo in [Problem] as noted
	by Richard Birkby.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidConstructorsInStaticTypesRule.cs: Rework the rule to
	be more specific to 1.x code - where we want to the possibility 
	to instantiate "static" types by avoiding a visible default ctor.
	* Makefile.am: Fix typo that limited the number of tests being 
	built and executed.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewUseOfModuloOneOnIntegersRule.cs: Remove unused field 
	(self-test)

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs,
	* DoNotRoundIntegersRule.cs,